--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 <modelVersion>4.0.0</modelVersion>
 <groupId>crail-terasort</groupId>
-<artifactId>crail-terasort</artifactId>
+<artifactId>crail-terasortDS</artifactId>
 <version>2.0</version>
 
 <name>crail-terasort</name>
@@ -199,10 +199,15 @@
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   <scala.version>2.11.8</scala.version>
   <scala.binary.version>2.11</scala.binary.version>
-  <spark.version>2.0.0</spark.version>
+  <spark.version>2.0.1</spark.version>
 </properties>
 
 <dependencies>
+  <dependency>
+    <groupId>org.apache.spark</groupId>
+    <artifactId>spark-sql_2.10</artifactId>
+    <version>${spark.version}</version>
+  </dependency>
   <dependency>
     <groupId>org.scala-lang</groupId>
     <artifactId>scala-library</artifactId>
